<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewUSDRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usd_rate_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/textViewEURRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eur_rate_label"
        app:layout_constraintTop_toBottomOf="@id/textViewUSDRate"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"/>

    <RadioGroup
        android:id="@+id/radioGroupRateSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewEURRate"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonOfficialUSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/official_usd_radio_text"/>

        <RadioButton
            android:id="@+id/radioButtonOfficialEUR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/official_eur_radio_text"/>

        <RadioButton
            android:id="@+id/radioButtonCustomRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_rate_radio_text"/>
    </RadioGroup>

    <EditText
        android:id="@+id/editTextCustomRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/custom_rate_hint"
        android:inputType="numberDecimal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/radioGroupRateSelection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/textViewSelectedRateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_rate_display_placeholder"
        app:layout_constraintTop_toBottomOf="@id/editTextCustomRate"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/editTextAmountToConvert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount_to_convert_hint"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/textViewSelectedRateDisplay" <!-- Adjusted constraint -->
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewCopyAmountToConvert"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"/>

    <ImageView
        android:id="@+id/imageViewCopyAmountToConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_copy"
        app:layout_constraintTop_toTopOf="@id/editTextAmountToConvert"
        app:layout_constraintBottom_toBottomOf="@id/editTextAmountToConvert"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/copy_content_description"/>

    <Spinner
        android:id="@+id/spinnerFromCurrency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextAmountToConvert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinnerToCurrency"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"/>

    <Spinner
        android:id="@+id/spinnerToCurrency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextAmountToConvert"
        app:layout_constraintStart_toEndOf="@id/spinnerFromCurrency"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/editTextConvertedAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/converted_amount_hint"
        android:inputType="numberDecimal"
        android:focusable="false"
        android:editable="false"
        app:layout_constraintTop_toBottomOf="@id/spinnerFromCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewCopyConvertedAmount"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"/>

    <ImageView
        android:id="@+id/imageViewCopyConvertedAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_copy"
        app:layout_constraintTop_toTopOf="@id/editTextConvertedAmount"
        app:layout_constraintBottom_toBottomOf="@id/editTextConvertedAmount"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/copy_content_description"/>

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/convert_button_text"
        app:layout_constraintTop_toBottomOf="@id/editTextConvertedAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/buttonViewHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_history_button_text"
        app:layout_constraintTop_toBottomOf="@id/buttonConvert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonViewCalendar"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/buttonViewCalendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_calendar_button_text"
        app:layout_constraintTop_toBottomOf="@id/buttonConvert"
        app:layout_constraintStart_toEndOf="@id/buttonViewHistory"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
